--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>goit-js-hw-11</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
-    <header>
-      <form class="search-form" id="search-form">
+    <div class="search-form-wrap">
+      <form class="search-form">
         <input
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
+          class="search-form-input"
         />
-        <button type="submit">GO!</button>
+        <button type="submit" class="search-form-button">
+          <img src="./images/search.svg" alt="" class="form-search-icon" />
+        </button>
       </form>
-    </header>
-    <section>
-      <div class="gallery">
-        <!-- Карточки изображений -->
-      </div>
-      <div class="sentinel"></div>
-      <button type="button" class="load-more is-hidden">Load more</button>
-    </section>
-    <script src="index.js" type="module"></script>
+    </div>
+
+    <div class="gallery"></div>
+
+    <hr class="end-line hidden" />
+
+    <!-- <div class="load-more-wrap">
+      <button type="submit" class="load-more hidden">Load more</button>
+    </div> -->
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
